logs/videodownloader.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/videodownloader'...
Compiling './lib/python3.5/site-packages/videodownloader/main.py'...
***   File "./lib/python3.5/site-packages/videodownloader/main.py", line 30
    print 'videodownloader-2.0.0 - by Jake Wharton <jakewharton@gmail.com>'
                                                                          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/videodownloader/providers'...
Compiling './lib/python3.5/site-packages/videodownloader/providers/__init__.py'...
***   File "./lib/python3.5/site-packages/videodownloader/providers/__init__.py", line 103
    filename = re.sub(ur'[?\/\\<>:"*|]+', '_', self.filename, re.UNICODE)
                                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/videodownloader/providers/youtube.py'...
***   File "./lib/python3.5/site-packages/videodownloader/providers/youtube.py", line 48
    print 'WARNING: Unknown format "%s" found.'
                                              ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/videodownloader-2.0.0.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
